--- a/agenda.css
+++ b/agenda.css
@@ -1,7 +1,7 @@
 ul {list-style-type: none;}
 body {font-family: Verdana, sans-serif;}
 
-/* Month header */
+/* en-tête de la semaine */
 .week {
   padding: 70px 25px;
   width: 100%;
@@ -9,32 +9,32 @@ body {font-family: Verdana, sans-serif;}
   text-align: center;
 }
 
-/* Month list */
+/* liste des jours de semaine */
 .week ul {
   margin: 0;
   padding: 0;
 }
 
 .week ul li {
-  color: white;
-  font-size: 20px;
+  color: rgb(245, 12, 12);
+  font-size: 50px;
   text-transform: uppercase;
   letter-spacing: 3px;
 }
 
-/* Previous button inside month header */
+/* Bouton "précédent" du semainier */
 .week .prev {
   float: left;
   padding-top: 10px;
 }
 
-/* Next button */
+/* Bouton "suivant" */
 .week .next {
   float: right;
   padding-top: 10px;
 }
 
-/* Weekdays (Mon-Sun) */
+/* Jours de la semaine (Mon-Sun) */
 .weekdays {
   margin: 0;
   padding: 10px 0;
@@ -50,7 +50,7 @@ body {font-family: Verdana, sans-serif;}
   text-align: center;
 }
 
-/* Days (1-31) */
+/* heures (7h à minuit) */
 .hours {
   padding: 5px 0;
   background: #eee;
@@ -69,7 +69,7 @@ body {font-family: Verdana, sans-serif;}
   color: #777;
 }
 
-/* Highlight the "current" day */
+/* surbrillance de l'heure actuelle */
 .hours li .active {
   padding: 5px;
   background: #1abc9c;
