--- a/agenda.css
+++ b/agenda.css
@@ -2,7 +2,7 @@ ul {list-style-type: none;}
 body {font-family: Verdana, sans-serif;}
 
 /* en-tête de la semaine */
-.week {
+header {
   padding: 70px 25px;
   width: 100%;
   background: #1abc9c;
@@ -10,12 +10,12 @@ body {font-family: Verdana, sans-serif;}
 }
 
 /* liste des jours de semaine */
-.week ul {
+header ul {
   margin: 0;
   padding: 0;
 }
 
-.week ul li {
+header ul li {
   color: rgb(245, 12, 12);
   font-size: 50px;
   text-transform: uppercase;
@@ -23,19 +23,19 @@ body {font-family: Verdana, sans-serif;}
 }
 
 /* Bouton "précédent" du semainier */
-.week .prev {
+header .prev {
   float: left;
   padding-top: 10px;
 }
 
 /* Bouton "suivant" */
-.week .next {
+header .next {
   float: right;
   padding-top: 10px;
 }
 
 /* Jours de la semaine (Mon-Sun) */
-.weekdays {
+.jours {
   margin: 0;
   padding: 10px 0;
   background-color:#ddd;
@@ -43,7 +43,7 @@ body {font-family: Verdana, sans-serif;}
   flex-direction: row;
 }
 
-.weekdays li {
+.jours li {
 
   width: 13.6%;
   color: #666;
@@ -51,7 +51,7 @@ body {font-family: Verdana, sans-serif;}
 }
 
 /* heures (7h à minuit) */
-.hours {
+.heures {
   padding: 5px 0;
   background: #eee;
   margin: 0;
@@ -59,7 +59,7 @@ body {font-family: Verdana, sans-serif;}
   flex-direction: column;
 }
 
-.hours li {
+.heures li {
   list-style-type: none;
   display: table-row;
   width: 13.6%;
@@ -70,7 +70,7 @@ body {font-family: Verdana, sans-serif;}
 }
 
 /* surbrillance de l'heure actuelle */
-.hours li .active {
+.heures li .active {
   padding: 5px;
   background: #1abc9c;
   color: white !important
