--- a/agenda.css
+++ b/agenda.css
@@ -1,10 +1,9 @@
 ul {list-style-type: none;}
-body {font-family: Verdana, sans-serif;}
+body {font-family: Verdana, sans-serif; width: 100%;}
 
 /* en-tête de la semaine */
 header {
   padding: 70px 25px;
-  width: 100%;
   background: #1abc9c;
   text-align: center;
 }
@@ -34,44 +33,12 @@ header .next {
   padding-top: 10px;
 }
 
-/* Jours de la semaine (Mon-Sun) */
-.jours {
-  margin: 0;
-  padding: 10px 0;
-  background-color:#ddd;
-  display: flex;
-  flex-direction: row;
-}
+.tftable {font-size:12px;color:#333333;width:100%;border-width: 1px;border-color: #729ea5;border-collapse: collapse;}
 
-.jours li {
+.tftable th {font-size:12px;background-color:#acc8cc;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;text-align:left;}
 
-  width: 13.6%;
-  color: #666;
-  text-align: center;
-}
+.tftable tr {background-color:#d4e3e5;}
 
-/* heures (7h à minuit) */
-.heures {
-  padding: 5px 0;
-  background: #eee;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
+.tftable td {font-size:12px;border-width: 1px;padding: 8px;border-style: solid;border-color: #729ea5;}
 
-.heures li {
-  list-style-type: none;
-  display: table-row;
-  width: 13.6%;
-  text-align: center;
-  margin-bottom: 5px;
-  font-size:12px;
-  color: #777;
-}
-
-/* surbrillance de l'heure actuelle */
-.heures li .active {
-  padding: 5px;
-  background: #1abc9c;
-  color: white !important
-}
+.tftable tr:hover {background-color:#ffffff;}
