--- a/agenda.css
+++ b/agenda.css
@@ -1,5 +1,5 @@
 ul {list-style-type: none;}
-body {font-family: Verdana, sans-serif; width: auto;}
+body {font-family: Verdana, sans-serif; width: auto; background-color: rgb(247, 209, 177);}
 
 /* en-tête de la semaine */
 header {
@@ -45,6 +45,9 @@ header .next {
 
 .tftable .midi {background-color:rgb(141, 255, 137);}
 
+.btn-container{ display: flex; justify-content: center; align-items: center;width: 100%;
+}
+
 /*bouton formulaire*/
 
 .button {
@@ -56,7 +59,29 @@ header .next {
  width: auto;
 }
 
-/*Style du formulaire/*
+/*Style du formulaire*/
+
+input[type=time], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+input[type=date], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
 
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
